--- a/CourseRegistrationSystem/Views/Class/RegisterClassForIU.cshtml
+++ b/CourseRegistrationSystem/Views/Class/RegisterClassForIU.cshtml
@@ -22,16 +22,17 @@
 <p>Duration: @Model.CourseClass.Course.NumberOfDays days</p>
 <p>Start Date: @Model.CourseClass.StartDate.ToString("yyyy-MM-dd") & End Date: @Model.CourseClass.EndDate.ToString("yyyy-MM-dd")</p>
 
-@using (Html.BeginForm("RegisterClassForIU", "Class", new { r = Model }))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => Model.CourseClass.ClassId)
 <div class="panel panel-default">
     <div class="panel-heading" data-toggle="collapse" data-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
         <h3 class="panel-title">Step1: Participant Details</h3>
     </div>
     <div class="collapse in" id="collapse1">
         <div class="panel-body">
-
+       
             <div class="form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -153,6 +154,7 @@
                         @Html.ValidationMessageFor(model => model.Participant.SalaryRange, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
