--- a/CourseRegistrationSystem/Areas/CourseAdmin/CourseAdmin.Master
+++ b/CourseRegistrationSystem/Areas/CourseAdmin/CourseAdmin.Master
@@ -12,7 +12,7 @@
 
     <div>
         <asp:Panel ID ="Title" runat="server" Font-Size="X-Large" Font-Name="Verdana">
-        <asp:Image ID="Image1" runat="server" ImageUrl="~/images/logo128.png"/>
+        <asp:ImageButton ID="ImageButton1" runat="server" ImageUrl="~/images/logo128.png" />
         <asp:ContentPlaceHolder ID="subTitle" runat="server">        
         Title
         </asp:ContentPlaceHolder>
@@ -22,7 +22,7 @@
     <div>
         <asp:Panel ID="Panel2" runat="server" HorizontalAlign="Right">
         <asp:Label ID="SayHello" runat="server" Text="Hello~" Font-Size="Large"></asp:Label>
-        <asp:Button ID ="LogOff" runat="server" Text ="Log Off" OnClick="LogOff_Click" Font-Size="Large"></asp:Button>
+        <asp:Button ID ="LogOff" runat="server" Text ="Log Off" OnClick="LogOff_Click" Font-Size="Large" Height="27px"></asp:Button>
         </asp:Panel>
         
     </div>
@@ -34,45 +34,38 @@
         </asp:Panel>
         </asp:ContentPlaceHolder>
     </div>
-
-    <div>
-        <asp:ContentPlaceHolder ID="Search" runat="server">
-        Search
-        </asp:ContentPlaceHolder>
-    </div>
+        
     
-    <div>      
-    <asp:Table ID="Table1" runat="server" CellPadding="2" CellSpacing="2" Width="90%" Height="750px" HorizontalAlign="Left" CaptionAlign="Top">
-        <asp:TableRow>
-            <asp:TableCell VerticalAlign="Top" HorizontalAlign="Left" BorderStyle="Double">
+        
+    <asp:Table ID="Table1" runat="server" CellPadding="2" CellSpacing="2" Width="100%" Height="750px" HorizontalAlign="Left" CaptionAlign="Top">
+        <asp:TableRow Width="100%">
+            <asp:TableCell VerticalAlign="Top" HorizontalAlign="Left" BorderStyle="Double" Width="25%">
                 <asp:ContentPlaceHolder ID="Menu" runat="server">
-                    <asp:Menu ID="Menu1" runat="server" BackColor="#E3EAEB" 
-                DynamicHorizontalOffset="2" Font-Names="Verdana" Font-Size="Small" 
-                ForeColor="#666666" Orientation="Horizontal" StaticSubMenuIndent="10px" 
-                Height="16px" Width="189px" style="margin-left: 0px">
-                <StaticSelectedStyle BackColor="#1C5E55" />
-                <StaticMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
-                <DynamicHoverStyle BackColor="#666666" ForeColor="White" />
-                <DynamicMenuStyle BackColor="#E3EAEB" />
-                <DynamicSelectedStyle BackColor="#1C5E55" />
-                <DynamicMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
-                <StaticHoverStyle BackColor="#666666" ForeColor="White" />
-                <Items>
-                    <asp:MenuItem Text="Class Management" Value="Class Management" NavigateUrl="~/Areas/CourseAdmin/ClassManagement/ClassList.aspx"></asp:MenuItem>
-                    <asp:MenuItem Text="Course Management" Value="Course Management" NavigateUrl="~/Areas/CourseAdmin/CourseManagement/CourseList.aspx"></asp:MenuItem>
-                    <asp:MenuItem Text="Registration Management" Value="Registration Management" NavigateUrl="~/Areas/CourseAdmin/RegistrationManagement/RegistrationList.aspx"></asp:MenuItem>
-                </Items>
-            </asp:Menu>
+                    <asp:Menu ID="Menu1" runat="server" BackColor="#B5C7DE" DynamicHorizontalOffset="2" Font-Names="Verdana" Font-Size="X-Large" ForeColor="#284E98" StaticSubMenuIndent="10px">
+                    <DynamicHoverStyle BackColor="#284E98" ForeColor="White" />
+                    <DynamicMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
+                    <DynamicMenuStyle BackColor="#B5C7DE" />
+                    <DynamicSelectedStyle BackColor="#507CD1" />
+                    <StaticHoverStyle BackColor="#284E98" ForeColor="White" />
+                    <StaticMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
+                    <StaticSelectedStyle BackColor="#507CD1" />
+                    <Items>
+                        <asp:MenuItem Text="Class Management" Value="Class Management" NavigateUrl="~/Areas/CourseAdmin/ClassManagement/ClassList.aspx"></asp:MenuItem>
+                        <asp:MenuItem Text="Course Management" Value="Course Management" NavigateUrl="~/Areas/CourseAdmin/CourseManagement/CourseList.aspx"></asp:MenuItem>
+                        <asp:MenuItem Text="Registration Management" Value="Registration Management" NavigateUrl="~/Areas/CourseAdmin/RegistrationManagement/RegistrationList.aspx"></asp:MenuItem>
+                    </Items>
+                </asp:Menu>
                 </asp:ContentPlaceHolder>
             </asp:TableCell>
-            <asp:TableCell HorizontalAlign="Left" VerticalAlign="Top" BorderStyle="Double">
+            <asp:TableCell HorizontalAlign="Left" VerticalAlign="Top" BorderStyle="Double" Width="75%">
+                <asp:ContentPlaceHolder ID="Search" runat="server">
+                </asp:ContentPlaceHolder>
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 
                 </asp:ContentPlaceHolder>
             </asp:TableCell>
         </asp:TableRow>
     </asp:Table>
-    </div>
 
 </form>
 </body>
