--- a/CourseRegistrationSystem/Areas/SystemAdmin/SystemAdmin.Master
+++ b/CourseRegistrationSystem/Areas/SystemAdmin/SystemAdmin.Master
@@ -7,10 +7,11 @@
     <title>System Admin Master</title>
 </head>
 <body>
-    <form id="form1" runat="server">
+   <form id="form1" runat="server" method="post">
+
     <div>
         <asp:Panel ID ="Title" runat="server" Font-Size="X-Large" Font-Name="Verdana">
-        <asp:Image ID="Image1" runat="server" ImageUrl="~/images/logo128.png"/>
+        <asp:ImageButton ID="ImageButton1" runat="server" ImageUrl="~/images/logo128.png" />
         <asp:ContentPlaceHolder ID="subTitle" runat="server">        
         Title
         </asp:ContentPlaceHolder>
@@ -20,42 +21,51 @@
     <div>
         <asp:Panel ID="Panel2" runat="server" HorizontalAlign="Right">
         <asp:Label ID="SayHello" runat="server" Text="Hello~" Font-Size="Large"></asp:Label>
-        <asp:Button ID ="LogOff" runat="server" Text ="Log Off" OnClick="LogOff_Click" Font-Size="Large"></asp:Button>
+        <asp:Button ID ="LogOff" runat="server" Text ="Log Off" OnClick="LogOff_Click" Font-Size="Large" Height="27px"></asp:Button>
         </asp:Panel>
         
     </div>
 
     <div>
-        <asp:ContentPlaceHolder ID="Path" runat="server">        
-        <asp:Panel ID="Panel6" runat="server" HorizontalAlign="Left">
+        <asp:ContentPlaceHolder ID="Path" runat="server">
+        <asp:Panel ID="Panel6" runat="server" HorizontalAlign="Left" >
           <asp:SiteMapPath ID="SiteMapPath1" runat="server"></asp:SiteMapPath>
         </asp:Panel>
         </asp:ContentPlaceHolder>
     </div>
-
-    <div>
-        <asp:ContentPlaceHolder ID="Search" runat="server">
-        Search
-        </asp:ContentPlaceHolder>
-    </div>
+        
     
-    <div>      
-    <asp:Table ID="Table1" runat="server" style="width: 100%;height:100%" BorderStyle="Double" CellPadding="2" CellSpacing="2">
-        <asp:TableRow Width="100%" Height="70%">
-            <asp:TableCell Width ="30%">
+        
+    <asp:Table ID="Table1" runat="server" CellPadding="2" CellSpacing="2" Width="100%" Height="750px" HorizontalAlign="Left" CaptionAlign="Top">
+        <asp:TableRow Width="100%">
+            <asp:TableCell VerticalAlign="Top" HorizontalAlign="Left" BorderStyle="Double" Width="25%">
                 <asp:ContentPlaceHolder ID="Menu" runat="server">
-                    Menu
+                    <asp:Menu ID="Menu1" runat="server" BackColor="#B5C7DE" DynamicHorizontalOffset="2" Font-Names="Verdana" Font-Size="X-Large" ForeColor="#284E98" StaticSubMenuIndent="10px">
+                    <DynamicHoverStyle BackColor="#284E98" ForeColor="White" />
+                    <DynamicMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
+                    <DynamicMenuStyle BackColor="#B5C7DE" />
+                    <DynamicSelectedStyle BackColor="#507CD1" />
+                    <StaticHoverStyle BackColor="#284E98" ForeColor="White" />
+                    <StaticMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
+                    <StaticSelectedStyle BackColor="#507CD1" />
+                    <Items>
+                        <asp:MenuItem Text="Class Management" Value="Class Management" NavigateUrl="~/Areas/CourseAdmin/ClassManagement/ClassList.aspx"></asp:MenuItem>
+                        <asp:MenuItem Text="Course Management" Value="Course Management" NavigateUrl="~/Areas/CourseAdmin/CourseManagement/CourseList.aspx"></asp:MenuItem>
+                        <asp:MenuItem Text="Registration Management" Value="Registration Management" NavigateUrl="~/Areas/CourseAdmin/RegistrationManagement/RegistrationList.aspx"></asp:MenuItem>
+                    </Items>
+                </asp:Menu>
                 </asp:ContentPlaceHolder>
             </asp:TableCell>
-            <asp:TableCell Width="70%" Height="70%">
+            <asp:TableCell HorizontalAlign="Left" VerticalAlign="Top" BorderStyle="Double" Width="75%">
+                <asp:ContentPlaceHolder ID="Search" runat="server">
+                </asp:ContentPlaceHolder>
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 
                 </asp:ContentPlaceHolder>
             </asp:TableCell>
         </asp:TableRow>
     </asp:Table>
-    </div>
 
-    </form>
+</form>
 </body>
 </html>
