--- a/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - CourseRegistrationSystem</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("ABC", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -71,7 +71,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     
-                    <li class="dropdown">
+                    @*<li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="~/Views/CompanyHR/CompanyInfo.cshtml" role="button" aria-expanded="false">
                             MyCompany
                         </a>
@@ -82,7 +82,7 @@
                                 <li>@Html.ActionLink("Registration List", "RegistrationList", "CompanyHR")</li>
                             </li>
                         </ul>
-                    </li>
+                    </li>*@
                 </ul>
                 
                 @Html.Partial("_LoginPartial")
